# Robot_gazebo_ws

./: .gitignore  README.md  my_map.pgm  my_map.yaml  my_map_serial.data  my_map_serial.posegraph  rviz_2.rviz
src/modelo_robot/: CMakeLists.txt  package.xml
src/modelo_robot/config/: mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
src/modelo_robot/launch/: base_sim.launch.py  depth_cloud.launch.py  gazebo.launch.py  nav_full.launch.py  nav_only.launch.py  slam_nav2.launch.py  spawn_robot_and_tugbot.launch.py
src/modelo_robot/maps/: my_map.pgm  my_map.yaml
src/modelo_robot/urdf/: Seguidor_linea_robot.urdf
src/modelo_robot/worlds/: elevator_world.world  robot_and_tugbot.world  tugbot_only.world
src/publicador_python/: package.xml  setup.py
src/publicador_python/publicador_python/: autonomia_wander.py  publicador_cmd.py  subscriber_odom.py
