<?xml version="1.0"?>
<package format="3">
  <name>publicador_python</name>
  <version>0.0.0</version>
  <description>Publicador y nodos de autonomía en ROS 2 (Python)</description>

  <!-- ───── dependencias de ejecución ───── -->
  <depend>geometry_msgs</depend>    <!-- Twist -->
  <depend>nav_msgs</depend>         <!-- Odometry -->
  <depend>rclpy</depend>            <!-- cliente Python de ROS 2 -->
  <depend>sensor_msgs</depend>      <!-- LaserScan -->
  <depend>modelo_robot</depend>     <!-- (solo si realmente lo usas) -->
  <depend>sensor_msgs</depend>


  <!-- ───── dependencias de test/estilo ───── -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

